<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="cardinal_wings_title">Wings!</string>
    <string name="keywords_cardinal">Cardinal-AOSP</string>
    <string name="general_title">General</string>
    <string name="general_summary">Misc, UI/UX customization</string>
    <string name="statusbar_title">StatusBar</string>
    <string name="statusbar_summary">Options for customizing statusbar, qs, notifications etc</string>
    <string name="buttons_title">Buttons</string>
    <string name="buttons_summary">Options for Vol controls, Navigation bar etc</string>
    <string name="lockscreen_title">Lockscreen</string>
    <string name="lockscreen_summary">Lockscreen customizations</string>
    <string name="recents_ui_title">Recents</string>
    <string name="recents_ui_summary">Recents customizations</string>
    <string name="double_tap_to_sleep_title">Double-tap to sleep</string>
    <string name="double_tap_to_sleep_summary">Double tap on the status bar to put the device to sleep</string>
    <string name="volbtn_wake_device_title">Volume button wake</string>
    <string name="button_wake_summary">May not wake device if music control is active and music is playing</string>
    <string name="volbtn_music_controls_title">Volume button Music control</string>
    <string name="volbtn_music_controls_summary">With screen off, long pressing the volume keys will seek tracks</string>
    <string name="wake_when_plugged_or_unplugged_title">Wake on plug</string>
    <string name="wake_when_plugged_or_unplugged_summary">Turn the screen on when connecting or disconnecting a power source</string>
    <string name="network_traffic_title">Network traffic</string>
    <string name="network_traffic_summary">Option to show net activity meter on status bar</string>
    <string name="network_traffic_state_title">Net activity in statusbar</string>
    <string name="network_traffic_autohide_threshold_title">Net activity autohide threshold (KB/s)</string>
    <string name="show_network_traffic_disable">Disabled</string>
    <string name="show_network_traffic_up">Outgoing</string>
    <string name="show_network_traffic_down">Incoming</string>
    <string name="show_network_traffic_all">Outgoing and incoming</string>
    <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press on color below to apply</string>
    <string name="arrow_right">→</string>
    <string name="arrow_down">↓</string>
    <string name="hex">Hex:</string>
    <string name="hex_hint">#ff000000</string>
    <string name="set">Set</string>
    <string name="color_default">Default</string>
    <string name="quicksettings_category">QuickSettings</string>
    <string name="quicksettings_summary">Configure QS layout</string>
    <string name="qs_layout_category">QS tiles layout</string>
    <string name="qs_rows_columns_title">QS rows and columns</string>
    <string name="qs_rows_portrait_title">Tiles rows on portrait</string>
    <string name="qs_rows_landscape_title">Tiles rows on landscape</string>
    <string name="qs_columns_portrait_title">Tiles columns on portrait</string>
    <string name="qs_columns_landscape_title">Tiles columns on landscape</string>
    <string name="qs_tile_title_visibility_title">QS tile titles</string>
    <string name="qs_tile_title_visibility_summary_on">QS tiles titles are now visible</string>
    <string name="qs_tile_title_visibility_summary_off">QS tiles titles are now gone</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="reset_android">Android</string>
    <string name="reset_cardinal">Cardinal-AOSP</string>
    <string name="reset_colors">Reset colors</string>
    <string name="text_title">Text</string>
    <string name="icon_title">Icon</string>
    <string name="color_title">Color</string>
    <string name="colors_title">Colors</string>
    <string name="fprint_sucess_vib_title">Fingerprint authentication vibration</string>
    <string name="fprint_sucess_vib_summary">Vibrate on successful fingerprint authentication</string>
    <string name="battery_settings_title">Battery Settings</string>
    <string name="battery_settings_summary">Customize Battery styles</string>
    <string name="fp_unlock_keystore_title">FP unlock</string>
    <string name="fp_unlock_keystore_summary">Allow unlocking device using Fingerprint directly after boot\nNote: at your own risk!</string>
    <string name="media_art_title">Media cover art</string>
    <string name="media_art_summary">Enable media cover art on the lockscreen</string>
    <string name="ime_switcher_notify">Keyboard selector notification</string>
    <string name="custom_leds">LED lights</string>
    <string name="custom_battery_light_settings">Battery charging light</string>
    <string name="battery_light_enable">Enable</string>
    <string name="battery_light_low_blinking_title">Blinking light on low battery</string>
    <string name="battery_light_cat">Battery light color when charging</string>
    <string name="battery_light_low_color">Low battery</string>
    <string name="battery_light_medium_color">Medium battery</string>
    <string name="battery_light_full_color">Almost full battery</string>
    <string name="battery_light_reallyfull_color">Full (100) battery</string>
    <string name="battery_light_allow_on_dnd_title">Battery light in Do Not Disturb mode</string>
    <string name="status_bar_icon_blacklist_title">Status bar icons</string>
    <string name="status_bar_icon_blacklist_summary">Configure what icons are shown on status bar</string>
    <string name="lockscreen_shortcuts_title">Lockscreen shortcuts</string>
    <string name="lockscreen_shortcuts_summary">Lockscreen bottom shortcuts</string>
    <string name="navbar_buttons_title">Navigation bar layout</string>
    <string name="navbar_buttons_summary">Configure on-screen navigation bar layout and custom buttons</string>
    <string name="qs_brightness_slider_title">Brightness slider</string>
    <string name="qs_brightness_slider_summary">Show brightness slider on quick settings panel</string>
    <string name="vol_dnd_category_title">Do not disturb mode</string>
    <string name="volbtn_down_zen_title">Volume down for do not disturb</string>
    <string name="volbtn_down_zen_summary">allow volume down to enter do not disturb mode</string>
    <string name="volbtn_up_zen_title">Volume up in do not disturb</string>
    <string name="volbtn_up_zen_summary">allow volume up to exit do not disturb mode</string>
    <string name="vol_zen_title">Do not disturb switch</string>
    <string name="vol_zen_summary">Show do not disturb swith on volume panel</string>
    <string name="powern_notifications_title">Power notifications</string>
    <string name="powern_notifications_summary">Advanced notifications control on long press</string>
    <string name="notification_settings_title">Notifications</string>
    <string name="notification_settings_summary">Manage notification related settings</string>
   <string name="navigationbar_settings_title">Navigation bar</string>
   <string name="navigationbar_settings_summary">Configure navigation buttons</string>
   <string name="hardwarekeys_cat_title">Hardware Keys</string>
    <string name="show_clear_all_recents_button_title">Clear all FAB</string>
    <string name="show_clear_all_recents_button_summary_on">Show clear all FAB</string>
    <string name="show_clear_all_recents_button_summary_off">Show AOSP clear all</string>
    <string name="recents_clear_all_location_title">Clear all location</string>
    <string name="recents_clear_all_location_top_right">Top right</string>
    <string name="recents_clear_all_location_top_left">Top left</string>
    <string name="recents_clear_all_location_top_center">Top center</string>
    <string name="recents_clear_all_location_bottom_right">Bottom right</string>
    <string name="recents_clear_all_location_bottom_left">Bottom left</string>
    <string name="recents_clear_all_location_bottom_center">Bottom center</string>
    <string name="navigation_bar_show_title">Show navigation bar</string>
    <string name="navigation_bar_show_summary">Force enable on-screen navigation bar</string>
    <string name="button_backlight_cat">Button backlight</string>
    <string name="button_backlight_on_touch_only_title">Button touch</string>
    <string name="button_backlight_on_touch_only_summary">Enable backlight with timout only on button touch</string>
    <string name="button_backlight_enable_title">Enable</string>
    <string name="button_manual_brightness">Brightness level, disabled on value 0</string>
    <string name="backlight_timeout_title">Backlight timeout</string>
    <string name="backlight_timeout_on">Enabled always</string>
    <string name="backlight_timeout_3s">3 sec</string>
    <string name="backlight_timeout_default">5 sec (default)</string>
    <string name="backlight_timeout_10s">10 sec</string>
    <string name="backlight_timeout_15s">15 sec</string>
    <string name="backlight_timeout_20s">20 sec</string>
    <string name="backlight_timeout_30s">30 sec</string>
    <string name="home_key_title">Home button</string>
    <string name="back_key_title">Back button</string>
    <string name="menu_key_title">Menu button</string>
    <string name="assist_key_title">Assist button</string>
    <string name="app_switch_key_title">Recents button</string>
    <string name="camera_key_title">Camera button</string>
    <string name="short_press_title">Short press action</string>
    <string name="long_press_title">Long press action</string>
    <string name="double_tap_title">Double tap action</string>
    <string name="action_nothing">No action</string>
    <string name="action_menu">Open/close menu</string>
    <string name="action_app_switch">Recents</string>
    <string name="action_search">Search assistant</string>
    <string name="action_voice_search">Voice search</string>
    <string name="action_in_app_search">In-app search</string>
    <string name="action_launch_camera">Open camera</string>
    <string name="action_last_app">Launch last app</string>
    <string name="action_splitscreen">Splitscreen</string>
    <string name="action_screenshot">Screenshot</string>
    <string name="action_partial_screenshot">Partial screenshot</string>
    <string name="action_screen_off">Screen off</string>
    <string name="swap_hardware_navigation_keys_title">Swap hardware keys</string>
    <string name="swap_hardware_navigation_keys_title_summary">Swap back and recents hardware navigation keys</string>
    <string name="swap_software_navigation_keys_title">Swap software keys</string>
    <string name="swap_software_navigation_keys_title_summary">Swap back and recents software navigation keys</string>
    <string name="heads_up_notifications">HeadsUp</string>
    <string name="sensor_block_title">Sensor block per-package</string>
    <string name="sensor_block_summary">Block access to certain sensors for some apps to save battery</string>
    <string name="lockscreen_hide_shortcuts_title">Hide bottom Shortcuts</string>
    <string name="lockscreen_hide_shortcuts_summary">Hide bottom shortcuts on secure lock screens</string>
    <string name="lockscreen_battery_info_title">Lockscreen charging info</string>
    <string name="lockscreen_battery_info_summary">Display negociated charger max current and voltage on lockscreen</string>
    <string name="ticker_mode_title">Statusbar notification ticker</string>
    <string name="torch_power_button_gesture_title">Screen off power button torch</string>
    <string name="volume_steps_title">Volume steps</string>
    <string name="volume_steps_summary">Configure available steps for different audio volumes</string>
    <string name="volume_keys_control_media_stream_title">Volume keys control media volume</string>
    <string name="volume_keys_control_media_stream_summary">Force volume keys to control media stream</string>
</resources>