<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2016 Cardinal-AOSP Project
  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.
  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.
  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/buttons_title"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings" >

    <Preference
            android:key="navigation_bar"
            android:title="@string/navigationbar_settings_title"
            android:summary="@string/navigationbar_settings_summary"
            android:fragment="com.cardinal.settings.fragments.NavigationBarSettings" />
 
    <ListPreference
        android:key="torch_power_button_gesture"
        android:title="@string/torch_power_button_gesture_title"
        android:entries="@array/torch_power_button_gesture_entries"
        android:entryValues="@array/torch_power_button_gesture_values" />

    <Preference
        android:key="volume_steps"
        android:title="@string/volume_steps_title"
        android:summary="@string/volume_steps_summary"
        android:fragment="com.cardinal.settings.fragments.VolumeSteps" />

    <com.cardinal.settings.preference.SystemSettingSwitchPreference
        android:key="volume_keys_control_media_stream"
        android:title="@string/volume_keys_control_media_stream_title"
        android:summary="@string/volume_keys_control_media_stream_summary"
        android:defaultValue="false" />

    <com.cardinal.settings.preference.SystemSettingSwitchPreference
            android:key="volume_wake_screen"
            android:title="@string/volbtn_wake_device_title"
            android:summary="@string/button_wake_summary"
            android:defaultValue="false" />

    <com.cardinal.settings.preference.SystemSettingSwitchPreference
            android:key="volbtn_music_controls"
            android:title="@string/volbtn_music_controls_title"
            android:summary="@string/volbtn_music_controls_summary"
            android:defaultValue="false" />

    <PreferenceCategory
        android:key="vol_dnd_category"
        android:title="@string/vol_dnd_category_title" >

        <com.cardinal.settings.preference.SecureSettingSwitchPreference
            android:key="sysui_volume_down_silent"
            android:title="@string/volbtn_down_zen_title"
            android:summary="@string/volbtn_down_zen_summary"
            android:defaultValue="true"/>

        <com.cardinal.settings.preference.SecureSettingSwitchPreference
            android:key="sysui_volume_up_silent"
            android:title="@string/volbtn_up_zen_title"
            android:summary="@string/volbtn_up_zen_summary"
            android:defaultValue="true" />
<!--
        <com.cardinal.settings.preference.SecureSettingSwitchPreference
            android:key="sysui_show_full_zen"
            android:title="@string/vol_zen_title"
            android:summary="@string/vol_zen_summary"
            android:defaultValue="false"/>
-->
    </PreferenceCategory>

</PreferenceScreen>
