<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2017 Cardinal-AOSP
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/cardinal_wings_title">

        <Preference
            android:title="@string/general_title"
            android:summary="@string/general_summary"
            android:fragment="com.cardinal.settings.fragments.GeneralSettings" />

        <Preference
            android:title="@string/statusbar_title"
            android:summary="@string/statusbar_summary"
            android:fragment="com.cardinal.settings.fragments.StatusBarSettings" />

        <Preference
            android:title="@string/buttons_title"
            android:summary="@string/buttons_summary"
            android:fragment="com.cardinal.settings.fragments.ButtonsSettings" />

        <Preference
            android:title="@string/lockscreen_title"
            android:summary="@string/lockscreen_summary"
            android:fragment="com.cardinal.settings.fragments.LockScreenSettings" />

</PreferenceScreen>