<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2017 Cardinal-AOSP Project
  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.
  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.
  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/lockscreen_title"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings" >

    <Preference
            android:title="@string/lockscreen_shortcuts_title"
            android:summary="@string/lockscreen_shortcuts_summary">
        <intent android:action="android.intent.action.MAIN"
                android:targetPackage="com.android.systemui"
                android:targetClass="com.android.systemui.tuner.LockscreenTunerActivity" />
    </Preference>

    <com.cardinal.settings.preference.SecureSettingSwitchPreference
        android:key="hide_lock_shortcuts"
        android:title="@string/lockscreen_hide_shortcuts_title"
        android:summary="@string/lockscreen_hide_shortcuts_summary"
        android:defaultValue="false" />

	<com.cardinal.settings.preference.SystemSettingSwitchPreference
    	    android:key="lockscreen_media_metadata"
            android:title="@string/media_art_title"
            android:summary="@string/media_art_summary"
            android:defaultValue="true" />

    <com.cardinal.settings.preference.SystemSettingSwitchPreference
        android:key="lockscreen_battery_info"
        android:title="@string/lockscreen_battery_info_title"
        android:summary="@string/lockscreen_battery_info_summary"
        android:defaultValue="false" />

    <SwitchPreference
        android:key="fp_unlock_keystore"
        android:title="@string/fp_unlock_keystore_title"
        android:summary="@string/fp_unlock_keystore_summary"
        android:persistent="false" />

</PreferenceScreen>
