<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2016 Cardinal-AOSP Project
  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.
  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.
  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/statusbar_title"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings" >

    <Preference
        android:key="quicksettings"
        android:fragment="com.cardinal.settings.fragments.QuickSettings"
        android:title="@string/quicksettings_category"
        android:summary="@string/quicksettings_summary" />

    <Preference
        android:key="notification_settings"
        android:title="@string/notification_settings_title"
        android:summary="@string/notification_settings_summary"
        android:fragment="com.cardinal.settings.fragments.NotificationSettings" />

    <Preference
            android:title="@string/status_bar_icon_blacklist_title"
            android:summary="@string/status_bar_icon_blacklist_summary">
        <intent android:action="android.intent.action.MAIN"
                android:targetPackage="com.android.systemui"
                android:targetClass="com.android.systemui.tuner.StatusBarIconsTunerActivity" />
    </Preference>

    <Preference
        android:key="traffic"
        android:fragment="com.cardinal.settings.fragments.Traffic"
        android:title="@string/network_traffic_title"
        android:summary="@string/network_traffic_summary" />

<!--
    <Preference
        android:key="battery_settings"
        android:title="@string/battery_settings_title"
        android:summary="@string/battery_settings_summary"
        android:fragment="com.cardinal.settings.fragments.BatterySettings" />

    <Preference
            android:title="@string/powern_notifications_title"
            android:summary="@string/powern_notifications_summary">
        <intent android:action="android.intent.action.MAIN"
                android:targetPackage="com.android.systemui"
                android:targetClass="com.android.systemui.tuner.PowerNotificationsTunerActivity" />
    </Preference>

    <Preference
        android:fragment="com.cardinal.settings.fragments.CarrierLabelSettings"
        android:title="@string/carrier_label_settings_title"
        android:summary="@string/carrier_label_settings_summary" />

    <Preference
        android:fragment="com.cardinal.settings.fragments.ClockSettings"
        android:title="@string/clock_settings_title"
        android:summary="@string/clock_settings_summary" />

  <com.cardinal.settings.preference.SystemSettingSwitchPreference
        android:key="double_tap_sleep_gesture"
        android:title="@string/double_tap_to_sleep_title"
        android:summary="@string/double_tap_to_sleep_summary"
        android:defaultValue="false" />

  <com.cardinal.settings.preference.SystemSettingSwitchPreference
        android:key="status_bar_brightness_control"
        android:title="@string/status_bar_toggle_brightness"
        android:summary="@string/status_bar_toggle_brightness_summary"
        android:defaultValue="false" />

-->

</PreferenceScreen>
