<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2016 Cardinal-AOSP Project
  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.
  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.
  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/general_title"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings" >

    <com.cardinal.settings.preference.SecureSettingSwitchPreference
        android:key="doze_always_on"
        android:title="@string/doze_always_on_title"
        android:summary="@string/doze_always_on_summary"
        android:defaultValue="false" />

    <com.cardinal.settings.preference.SystemSettingSwitchPreference
        android:key="wake_when_plugged_or_unplugged"
        android:title="@string/wake_when_plugged_or_unplugged_title"
        android:summary="@string/wake_when_plugged_or_unplugged_summary"
        android:defaultValue="true" />

    <com.cardinal.settings.preference.SystemSettingSwitchPreference
        android:key="sensor_block"
        android:title="@string/sensor_block_title"
        android:summary="@string/sensor_block_summary"
        android:defaultValue="false" />

</PreferenceScreen>
