<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2016 Dirty Unicorns
  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 2 of the License, or
  (at your option) any later version.
  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.
  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/battery_settings_title">

    <PreferenceCategory
          android:key="custom_leds"
          android:title="@string/custom_leds" >
  
          <Preference
                android:key="charging_light"
                android:fragment="com.cardinal.settings.fragments.BatteryLightSettings"
                android:title="@string/custom_battery_light_settings" />
  
          <Preference
                android:key="custom_notification_light"
                android:fragment="com.android.settings.applications.NotificationApps"
                android:title="@string/custom_notification_light_settings" />

    </PreferenceCategory>
</PreferenceScreen>